# FLOYDS_pipeline

./: .gitignore  README.md  download_floyds_data.py  encode.py  floyds_default.yaml  floyds_pipeline.py  floyds_template.yaml  login_details.yaml  query_lco_archive.py  query_tns.py  reduce_floyds_data.py  setup.cfg  tns_api_search.py
AT2022DML/: reduce_floyds_data.py
lco_data-20220821-3/: ogg2m001-en06-20220812-0016-e00.fits.fz  ogg2m001-en06-20220812-0017-w00.fits.fz  ogg2m001-en06-20220812-0018-a00.fits.fz  ogg2m001-en06-20220812-0035-e00.fits.fz  ogg2m001-en06-20220812-0036-a00.fits.fz  ogg2m001-en06-20220812-0037-w00.fits.fz
lco_data-20220821-3_output/: AT2021LOI_at2021loi.csv  AT2021LOI_at2021loi.fits  blue_reduced_science.fits  blue_reduced_science_arc_spec.csv  blue_reduced_science_count.csv  blue_reduced_science_flux.csv  blue_reduced_science_flux_resampled.csv  blue_reduced_science_wavecal_coefficients.csv  blue_reduced_science_wavelength.csv  blue_reduced_science_wavelength_resampled.csv  blue_reduced_standard.fits  blue_reduced_standard_arc_spec.csv  blue_reduced_standard_count.csv  blue_reduced_standard_flux.csv  blue_reduced_standard_flux_resampled.csv  blue_reduced_standard_wavecal_coefficients.csv  blue_reduced_standard_wavelength.csv  blue_reduced_standard_wavelength_resampled.csv  floyds_at2021loi_20220812_0.yaml  red_reduced_science.fits  red_reduced_science_arc_spec.csv  red_reduced_science_count.csv  red_reduced_science_flux.csv  red_reduced_science_flux_resampled.csv  red_reduced_science_flux_resampled_atm_ext_telluric_corrected.csv  (+12 more)
(+15 files in other folders)
