[metadata]
name = floyds-pipeline
version = 0.0.1
license = BSD-3-Clause
license_files = LICENSE
description = An Unofficial FLOYDS Pipeline.
long_description = file: README.md
long_description_content_type = text/markdown
readme = README.md
author = Marco C Lam
author_email = lam@mail.tau.ac.il
maintainer = Marco C Lam
maintainer_email = lam@mail.tau.ac.il
url = https://github.com/cylammarco/FLOYDS_pipeline
download_url = https://github.com/cylammarco/FLOYDS_pipeline
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent

[options]
zip_safe = False
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires =
    aspired>=0.5
    ruamel.yaml>=0.16

[coverage:run]
relative_files = True
